@@ -1,8 +1,7 @@
 package nl.hva.ict.sm3.backend.model;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class Municipality {
     private String id;
@@ -11,49 +10,41 @@ public class Municipality {
     private Map<String, Integer> partyVotes = new HashMap<>();
     private Map<String, String> partyNames = new HashMap<>();
 
-    public Municipality(String id,String name, int validVotes) {
+    public Municipality(String id, String name, int validVotes) {
         this.id = id;
         this.name = name;
         this.validVotes = validVotes;
-        this.partyVotes = new HashMap<>();
     }
 
-    public String getId() {
-        return id;
-    }
+    public String getId() { return id; }
+    public String getName() { return name; }
+    public int getValidVotes() { return validVotes; }
+
     public void addVotesForParty(String partyId, String partyName, int votes) {
         partyVotes.put(partyId, partyVotes.getOrDefault(partyId, 0) + votes);
         partyNames.put(partyId, partyName);
         validVotes += votes;
     }
-    private List<Map<String, Object>> getPartiesSortedAndMapped(Integer limit) {
-        return partyVotes.entrySet()
-                .stream()
+
+    public List<Party> getAllParties() {
+        return partyVotes.entrySet().stream()
                 .sorted((a, b) -> Integer.compare(b.getValue(), a.getValue()))
-                .limit(limit == null ? partyVotes.size() : limit)
-                .map(e -> {
-                    Map<String, Object> m = new HashMap<>();
-                    m.put("id", e.getKey());
-                    m.put("name", partyNames.get(e.getKey()));
-                    m.put("votes", e.getValue());
-                    return m;
-                })
-                .toList();
+                .map(e -> new Party(
+                        e.getKey(),
+                        partyNames.get(e.getKey()),
+                        e.getValue()
+                ))
+                .collect(Collectors.toList());
     }
 
-    public List<Map<String, Object>> getTopPartiesWithNames(int n) {
-        return getPartiesSortedAndMapped(n);
+    public List<Party> getTopParties(int n) {
+        return getAllParties().stream()
+                .limit(n)
+                .collect(Collectors.toList());
     }
-
-    public List<Map<String, Object>> getAllPartiesWithNames() {
-        return getPartiesSortedAndMapped(null);
-    }
-
-    public String getName() { return name; }
-    public int getValidVotes() { return validVotes; }
 
     @Override
     public String toString() {
-        return "Municipality{id='%s, name='%s', validVotes=%d}".formatted(id, name, validVotes);
+        return "Municipality{id='%s', name='%s', validVotes=%d}".formatted(id, name, validVotes);
     }
 }
